# SurperPm-agent-knowledge

./: .gitignore  CLAUDE.md  INDEX.md  README.md
SurperPm-agent-knowledge/: INDEX.md
SurperPm-agent-plugins/: .gitignore  INDEX.md  TESTING.md
SurperPm-agent-web/: .gitignore  CONTRIBUTING.md  Dockerfile
SurperPm-agent-web/backend/: pyproject.toml
SurperPm-agent-web/backend/app/: config.py  database.py  main.py  models.py
SurperPm-agent-web/backend/app/models/: __init__.py  discussion.py  goal_group.py  mcp_server.py  secret.py  skill.py  topic.py  workspace.py
SurperPm-agent-web/backend/app/routes/: agents.py  auth.py  chat.py  config.py  deps.py  discussions.py  discussions_standalone.py  executions.py  global_config.py  goal.py  goal_groups.py  goals.py  knowledge.py  mcp.py  plugins.py  setup.py  skills.py  status.py  topics.py  topics_standalone.py  workspaces.py  ws.py  ws_browser.py  ws_term.py
SurperPm-agent-web/backend/app/services/: ai_chat.py  ai_key_resolver.py  ai_tools.py  browser_manager.py  chat_engine.py  chat_query.py  clarify_agent.py  clarify_executor.py  event_bus.py  exec_env.py  execution_lock.py  export_feishu_prd.py  extension_resolver.py  github_client.py  goal_executor.py  goal_runner.py  goal_service.py  helpers.py  knowledge_distiller.py  knowledge_store.py  knowledge_sync.py  session.py  source_fetcher.py
SurperPm-agent-web/backend/app/services/agent/: __init__.py  runner.py
SurperPm-agent-web/backend/tests/: conftest.py  test_goal_e2e.py  test_health.py
_meta/: frontmatter-schema.md
domain/: INDEX.md
extensions/: INDEX.md
learnings/: 20260609-https-git-clone-fallback.md  20260609-mock-data-deterministic-hash.md  20260610-doc-maturity-pipeline-pattern.md  20260610-goal-clarification-before-execution.md  (+8 more)
(+388 files in other folders)
