[project]
name = "SuperPmAgent-web-backend"
version = "0.1.0"
description = "SuperPmAgent养护室 Web — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "anthropic>=0.34",
    "pygithub>=2.3",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "pytest>=8.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
