[project]
name = "SuperPmAgent-web-backend"
version = "0.1.0"
description = "SuperPmAgent养护室 Web — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "anthropic>=0.34",
    "claude-agent-sdk>=0.1.80",
    "pygithub>=2.3",
    "python-multipart>=0.0.9",
    "pydantic>=2.7",
    "itsdangerous>=2.2",
    "sqlmodel>=0.0.38",
    "aiosqlite>=0.22.1",
    "cryptography>=48.0.0",
    "playwright>=1.60.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
per-file-ignores = {"app/routes/*.py" = ["B008"]}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "greenlet>=3.5.1",
]
